--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,18 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 16px;
+}
+body {
+  background-image: url("./images/tree.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  max-width: 100%;
+  height: 2000px;
+  overflow-x: hidden;
+}
 .current-plant {
   width: 14px;
   height: 3px;
