--- a/src/ReactComponents/Herosection.css
+++ b/src/ReactComponents/Herosection.css
@@ -10,7 +10,7 @@ html {
   font-size: 16px;
 }
 body {
-  background-image: url("./images/tree.jpg");
+  background-image: url("/images/tree.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
