--- a/src/ReactComponents/Navbar.css
+++ b/src/ReactComponents/Navbar.css
@@ -14,7 +14,7 @@ nav {
   cursor: pointer;
 }
 .logo {
-  background-image: url("./images/logo.png");
+  background-image: url("/images/logo.png");
   background-size: cover;
   width: 38px;
   height: 38px;
